testsuite/bsc.scheduler/resource/ResourceOneRuleSC.bs.bsc-sched-out.expected
checking package dependencies
compiling ResourceOneRuleSC.bs
code generation for sysResourceOneRuleSC starts
Error: "ResourceOneRuleSC.bs", line 13, column 14: (G0004)
  Rule `RL_unnamed' uses methods that conflict in parallel:
    r.write(...)
  and
    r.write(...)
  For the complete expressions use the flag `-show-range-conflict'.
=== schedule:
Nothing

-----

Schedule dump file created: sysResourceOneRuleSC.sched
=== Generated schedule for sysResourceOneRuleSC ===

Rule schedule
-------------
Rule: unnamed
Predicate: True
 

====================================================
